--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,4 +8,10 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    - if user_signed_in?
+      = "Logged in as #{current_user.full_name}"
+      = link_to 'Log out', destroy_user_session_path, method: :delete
+
+    = render partial: 'shared/flash_messages'
+
     = yield
