--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,2 +1,6 @@
-%h1 Workouts#index
-%p Find me in app/views/workouts/index.html.haml
+%h1 Workouts
+
+- if can?(:create, Workout)
+  = link_to 'New Workout', new_workout_path
+
+= render partial: 'shared/table', locals: { data: workouts_table_data(@workouts, current_user) }
