--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,33 @@
 @import "bootstrap";
+
+body {
+  background-image: image_url('background.jpg');
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.sidebar {
+  background-color: rgba(0, 0, 0, .5);
+  color: #fff;
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 1.4rem;
+    line-height: 2.8rem;
+    li {
+      &.active a {
+        color: #fff;
+      }
+      a {
+        text-decoration: none !important;
+      }
+    }
+  }
+}
+
+.content {
+  background-color: rgba(255, 255, 255, 0.8);
+}
