--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,13 +1,6 @@
-%h1 Gym Test Project
-
 %h2 Welcome
 
 %p
   There are multiple trainers experts in different areas and they are preparing the best workouts based on your expertise
-  %br/
-  = link_to 'Get Started', new_user_registration_path
 
-%p
-  Already member?
-  %br/
-  = link_to 'Log in', new_user_session_path
+= link_to 'Get Started', new_user_registration_path, class: 'btn btn-info btn-lg'
