--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!!
-%html
+%html.h-100
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title GymTestProject
@@ -7,11 +7,10 @@
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-  %body
-    - if user_signed_in?
-      = "Logged in as #{current_user.full_name}"
-      = link_to 'Log out', destroy_user_session_path, method: :delete
-
-    = render partial: 'shared/flash_messages'
-
-    = yield
+  %body.h-100
+    .container-fluid.h-100
+      .row.h-100
+        - col_classes = 'p-5'
+        = render partial: 'layouts/left_sidebar', locals: { col_classes: col_classes }
+        = render partial: 'layouts/content', locals: { col_classes: col_classes }
+        = render partial: 'layouts/right_sidebar', locals: { col_classes: col_classes }
